--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "introduction": "echo 'hey!!! My name is Aparna'",
-    "start-server": "npm run build && node dist/app1.js",
-    "build": "rm -rf dist/ && tsc"
+    "start-server": "npm run build && node dist/src/app.js",
+    "build": "rm -rf dist/ && tsc",
+    "migration:create": "npm run build && npx typeorm migration:create",
+    "migration:generate": "npm run build && npx typeorm migration:generate -d dist/src/db/data-source.db.js",
+    "migration:run": "npm run build && npx typeorm migration:run -d dist/src/db/data-source.db.js",
+    "migration:revert": "npm run build && npx typeorm migration:revert -d dist/src/db/data-source.db.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +18,8 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "express": "^4.19.2",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
