--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test-coverage": "jest --coverage",
     "introduction": "echo 'hey!!! My name is Aparna'",
     "start-server": "npm run build && node dist/src/app.js",
     "build": "rm -rf dist/ && tsc",
@@ -21,7 +22,9 @@
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jest-when": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
@@ -33,8 +36,19 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jest-when": "^3.5.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.9",
     "ts-jest": "^29.1.5"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(t)s$": "ts-jest"
+    },
+    "verbose": true,
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.ts",
+      "!**/index.ts"
+    ]
   }
 }
